# 1st-year-codes-

./: CMakeLists.txt
Archivos/: Ejercicio_1.cpp  Ejercicio_2.cpp  Ejercicio_3.cpp  Ejercicio_3.h  Ejercicio_4.cpp
Clases/Ejercicio1/: vehicle.cpp  vehicle.h
Clases/Ejercicio2/: libro.cpp  libro.h
Clases/Ejercicio3/: Pets.cpp  Pets.h
Colas/: Ejercicio_1Colas.cpp  Ejercicio_2Colas.cpp  Queue.h
Estructuras/: Ejercicio_1E.cpp  Ejercicio_2E.cpp  Ejercicio_3E.cpp  Ejercicio_4E.cpp  Estructuras.rar
Examenes/: Funciones.h  Guillaumet_Gabrie_eje1_Final.cpp  Guillaumet_Gabriel_Eje1_Parcial2.cpp  Guillaumet_Gabriel_Eje2_Parcial2.cpp  Guillaumet_Gabriel_eje1.cpp  Guillaumet_Gabriel_eje2.cpp  Guillaumet_Gabriel_eje2_Final.cpp  Guillaumet_Gabriel_eje3.cpp  Listado_Celulares_noStock.txt
Listas_Enlazadas/: Clientes_Cooperativa.txt  Ejercicio_1listas.cpp  Ejercicio_2listas.cpp  Ejercicio_3listas_clases.cpp  Ejercicio_3listas_estructuras.cpp  Ejercicio_4listas.cpp  Ejercicio_5listas.cpp  Productos_NoStock.txt  Stock.h
Memoria_Dinamica/: Ejercicio_1MD.cpp  Ejercicio_2MD.cpp  Ejercicio_3MD.cpp
Pilas/: Ejercicio_1Pilas.cpp  Ejercicio_2Pilas.cpp
Punteros/: Ejercicio_1p.cpp  Ejercicio_2p.cpp  Ejercicio_3p.cpp  Ejercicio_4p.cpp  Ejercicio_5p.cpp  Ejercicio_6p.cpp
Recursividad/: Ejercicio_1Rec.cpp  Ejercicio_2Rec.cpp  Ejercicio_3Rec.cpp  Ejercicio_4Rec.cpp  Recursividad.rar
Repaso/: Catalogo_Telefonos.txt  EjercicioModelo2_Parcial1.cpp  EjercicioModelo_Parcial1.cpp  Ejercicio_10R.cpp  Ejercicio_11R.cpp  Ejercicio_12R.cpp  Ejercicio_13R.cpp  Ejercicio_14R.cpp  Ejercicio_15R.cpp  Ejercicio_1R.cpp  Ejercicio_2R.cpp  Ejercicio_3R.cpp  Ejercicio_4R.cpp  Ejercicio_5R.cpp  Ejercicio_6R.cpp  Ejercicio_7R.cpp  Ejercicio_8R.cpp  Ejercicio_9R.cpp  Estacion_A.txt  Facturas_Dia.txt  Facturas_dia.txt  Incentivos.txt  Mediciones_Dia.txt  Requisitos.txt  Vector.txt
