cmake_minimum_required(VERSION 3.20)
project(Practico)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ejercicio_1Rec Recursividad/Ejercicio_1Rec.cpp)
add_executable(Ejercicio_2Rec Recursividad/Ejercicio_2Rec.cpp)
add_executable(Ejercicio_3Rec Recursividad/Ejercicio_3Rec.cpp)
add_executable(Ejercicio_4Rec Recursividad/Ejercicio_4Rec.cpp)
add_executable(Ejercicio_1A Archivos/Ejercicio_1.cpp)
add_executable(Ejercicio_2A Archivos/Ejercicio_2.cpp)
add_executable(Ejercicio_3A Archivos/Ejercicio_3.cpp)
add_executable(Ejercicio_4A Archivos/Ejercicio_4.cpp)
add_executable(Ejercicio_1C Clases/Ejercicio1/vehicle.cpp)
add_executable(Ejercicio_2C Clases/Ejercicio2/libro.cpp)
add_executable(Ejercicio_3C Clases/Ejercicio3/Pets.cpp)
add_executable(Ejercicio_1E Estructuras/Ejercicio_1E.cpp)
add_executable(Ejercicio_2E Estructuras/Ejercicio_2E.cpp)
add_executable(Ejercicio_3E Estructuras/Ejercicio_3E.cpp)
add_executable(Ejercicio_4E Estructuras/Ejercicio_4E.cpp)
add_executable(Ejercicio_1 Archivos/Ejercicio_1.cpp)
add_executable(Ejercicio_2 Archivos/Ejercicio_2.cpp)
add_executable(Ejercicio_3 Archivos/Ejercicio_3.cpp)
add_executable(Ejercicio_4 Archivos/Ejercicio_4.cpp)
add_executable(Ejercicio_1p Punteros/Ejercicio_1p.cpp)
add_executable(Ejercicio_2p Punteros/Ejercicio_2p.cpp)
add_executable(Ejercicio_3p Punteros/Ejercicio_3p.cpp)
add_executable(Ejercicio_4p Punteros/Ejercicio_4p.cpp)
add_executable(Ejercicio_5p Punteros/Ejercicio_5p.cpp)
add_executable(Ejercicio_6p Punteros/Ejercicio_6p.cpp)
add_executable(Ejercicio_1MD Memoria_Dinamica/Ejercicio_1MD.cpp)
add_executable(Ejercicio_2MD Memoria_Dinamica/Ejercicio_2MD.cpp)
add_executable(Ejercicio_3MD Memoria_Dinamica/Ejercicio_3MD.cpp)
add_executable(Ejercicio_1R Repaso/Ejercicio_1R.cpp)
add_executable(Ejercicio_2R Repaso/Ejercicio_2R.cpp)
add_executable(Ejercicio_3R Repaso/Ejercicio_3R.cpp)
add_executable(EjercicioModelo Repaso/EjercicioModelo_Parcial1.cpp)
add_executable(EjercicioModelo2 Repaso/EjercicioModelo2_Parcial1.cpp)
add_executable(Guillaumet_Gabriel_eje1 Examenes/Guillaumet_Gabriel_eje1.cpp)
add_executable(Guillaumet_Gabriel_eje2 Examenes/Guillaumet_Gabriel_eje2.cpp)
add_executable(Guillaumet_Gabriel_eje3 Examenes/Guillaumet_Gabriel_eje3.cpp)
add_executable(Ejercicio_1listas Listas_Enlazadas/Ejercicio_1listas.cpp)
add_executable(Ejercicio_2listas Listas_Enlazadas/Ejercicio_2listas.cpp)
add_executable(Ejercicio_3listas_e Listas_Enlazadas/Ejercicio_3listas_estructuras.cpp)
add_executable(Ejercicio_3listas_c Listas_Enlazadas/Ejercicio_3listas_clases.cpp)
add_executable(Ejercicio_4listas Listas_Enlazadas/Ejercicio_4listas.cpp)
add_executable(Ejercicio_5listas Listas_Enlazadas/Ejercicio_5listas.cpp)
add_executable(Ejercicio_1Colas Colas/Ejercicio_1Colas.cpp)
add_executable(Ejercicio_2Colas Colas/Ejercicio_2Colas.cpp)
add_executable(Ejercicio_1Pilas Pilas/Ejercicio_1Pilas.cpp)
add_executable(Ejercicio_2Pilas Pilas/Ejercicio_2Pilas.cpp)
add_executable(Ejercicio_4R Repaso/Ejercicio_4R.cpp)
add_executable(Ejercicio_5R Repaso/Ejercicio_5R.cpp)
add_executable(Ejercicio_6R Repaso/Ejercicio_6R.cpp)